public/navbar.css
body{
    display: flex;
    height: 100vh;
}

@media only screen and (max-width: 690px){
    body{
        flex-direction: column;
    }
    nav{
        text-align: center;
    }
}
nav{
    padding: 10px;
    display: flex;
    flex-direction: column;
    background-color: #000000;
    border: #3f2767 solid 1px;
    position: sticky;
}

nav #logo{
    font-weight: bold;
}

nav a{
    font-size: larger;
    text-decoration: none;
    color: #e5e2ff;
    margin: 5px;
}
nav a:hover{
    color: #c3ffe1;
    background-color: #0e0c19;
}

.content-frame {
    display: block;
    position: fixed;
    width: 100%;
    height: 100%; /* results in weird scrollbar and bottom of screen cutoff shenanigans tho */
    border: none;
    overflow: hidden;
}

